# freesyntax

./: .isort.cfg  LICENSE.txt  README.md  example.py  example2.py  rpexample.py  setup.cfg
freesyntax/: factory.py  grammar.py  parser.py  shortcuts.py  structs.py
freesyntax/lib2to3/: Grammar.txt  __main__.py  btm_matcher.py  btm_utils.py  fixer_base.py  fixer_util.py  main.py  patcomp.py  pygram.py  pytree.py  refactor.py
freesyntax/lib2to3/pgen2/: conv.py  driver.py  grammar.py  literals.py  parse.py  pgen.py  token.py  tokenize.py
