[metadata]
name = freesyntax
version = 0.1.0
url = https://github.com/isidentical/freesyntax
author = isidentical
description = Syntactically Free Python
long_description = file: README.md
long_description_content_type = text/markdown
license-file = LICENSE.txt

[options]
packages = find:
python_requires = >=3.9

[bdist_wheel]
universal = True
